--- a/login.html
+++ b/login.html
@@ -3,98 +3,215 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Lightning Mobile Bridge</title>
+    <title>Login - Bit2Momo</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f8fafc;
+        }
         .lightning-gradient {
-            background: linear-gradient(135deg, #0070f3 0%, #7928ca 100%);
+            background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
         }
         .form-container {
-            animation: slideUp 0.5s ease-out forwards;
+            animation: slideUp 0.3s ease-out forwards;
         }
         @keyframes slideUp {
-            from { transform: translateY(20px); opacity: 0; }
+            from { transform: translateY(10px); opacity: 0; }
             to { transform: translateY(0); opacity: 1; }
         }
         .input-focus {
-            transition: all 0.3s ease;
+            transition: all 0.2s ease;
+            font-family: 'Inter', sans-serif;
+            font-weight: 400;
+            border: 1px solid #e2e8f0;
         }
         .input-focus:focus {
-            transform: translateY(-2px);
+            transform: translateY(-1px);
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+            border-color: #4f46e5;
+        }
+        .btn-primary {
+            transition: all 0.2s ease;
+        }
+        .btn-primary:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+        }
+        .nav-link {
+            transition: all 0.2s ease;
+        }
+        .nav-link:hover {
+            color: #4f46e5;
+        }
+        .form-wrapper {
+            background: white;
+            border: 1px solid #e2e8f0;
+            border-radius: 1rem;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        }
+        .form-header {
+            border-bottom: 1px solid #e2e8f0;
+            padding: 2rem;
+        }
+        .form-content {
+            padding: 2rem;
+        }
+        .form-footer {
+            border-top: 1px solid #e2e8f0;
+            padding: 2rem;
         }
     </style>
 </head>
-<body class="bg-gray-50 min-h-screen flex items-center justify-center">
-    <div class="max-w-md w-full space-y-8 p-8">
-        <div class="text-center">
-            <a href="home.html" class="inline-flex items-center">
-                <i class="fas fa-bolt text-indigo-600 text-3xl"></i>
-                <span class="ml-2 text-2xl font-bold text-gray-900">Bit2Momo</span>
-            </a>
-            <h2 class="mt-6 text-3xl font-extrabold text-gray-900">
-                Sign in to your account
-            </h2>
-            <p class="mt-2 text-sm text-gray-600">
-                Or
-                <a href="signup.html" class="font-medium text-indigo-600 hover:text-indigo-500">
-                    create a new account
+<body class="min-h-screen flex items-center justify-center p-4">
+    <div class="max-w-md w-full">
+        <div class="form-wrapper">
+            <div class="form-header text-center">
+                <div class="w-20 h-20 bg-indigo-100 rounded-full flex items-center justify-center mx-auto mb-4">
+                    <img src="bit2momo logo.jpg" alt="Bit2Momo Logo" class="w-16 h-16 rounded-full" />
+                </div>
+                <a href="home.html" class="inline-flex items-center">
+                    <span class="text-2xl font-bold text-gray-900">Bit2Momo</span>
                 </a>
-            </p>
-        </div>
-        <form class="mt-8 space-y-6 form-container" action="#" method="POST">
-            <div class="rounded-md shadow-sm -space-y-px">
-                <div>
-                    <label for="email-address" class="sr-only">Email address</label>
-                    <input id="email-address" name="email" type="email" autocomplete="email" required 
-                           class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm input-focus"
-                           placeholder="Email address">
-                </div>
-                <div>
-                    <label for="password" class="sr-only">Password</label>
-                    <input id="password" name="password" type="password" autocomplete="current-password" required 
-                           class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm input-focus"
-                           placeholder="Password">
-                </div>
-            </div>
-
-            <div class="flex items-center justify-between">
-                <div class="flex items-center">
-                    <input id="remember-me" name="remember-me" type="checkbox" 
-                           class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-                    <label for="remember-me" class="ml-2 block text-sm text-gray-900">
-                        Remember me
-                    </label>
-                </div>
-
-                <div class="text-sm">
-                    <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">
-                        Forgot your password?
+                <h2 class="mt-6 text-3xl font-extrabold text-gray-900">
+                    Welcome Back
+                </h2>
+                <p class="mt-2 text-sm text-gray-600">
+                    Don't have an account?
+                    <a href="signup.html" class="font-medium text-indigo-600 hover:text-indigo-500 nav-link">
+                        Sign up now
                     </a>
-                </div>
+                </p>
             </div>
 
-            <div>
-                <button type="submit" 
-                        class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white lightning-gradient hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                    <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-                        <i class="fas fa-lock text-indigo-500 group-hover:text-indigo-400"></i>
-                    </span>
-                    Sign in
-                </button>
+            <div class="form-content">
+                <form class="space-y-6 form-container" action="#" id="loginForm">
+                    <div class="space-y-4">
+                        <div>
+                            <label for="email-address" class="block text-sm font-medium text-gray-700 mb-2">
+                                <i class="fas fa-envelope mr-2 text-indigo-600"></i>Email address
+                            </label>
+                            <input id="email" name="email" type="email" autocomplete="email" required 
+                                   class="appearance-none relative block w-full px-4 py-3 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-lg focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm input-focus"
+                                   placeholder="Enter your email">
+                        </div>
+                        <div>
+                            <label for="password" class="block text-sm font-medium text-gray-700 mb-2">
+                                <i class="fas fa-lock mr-2 text-indigo-600"></i>Password
+                            </label>
+                            <input id="password" name="password" type="password" autocomplete="current-password" required 
+                                   class="appearance-none relative block w-full px-4 py-3 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-lg focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm input-focus"
+                                   placeholder="Enter your password">
+                        </div>
+                        <p id="response"></p>
+                    </div>
+
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-center">
+                            <input id="remember-me" name="remember-me" type="checkbox" 
+                                   class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
+                            <label for="remember-me" class="ml-2 block text-sm text-gray-900">
+                                Remember me
+                            </label>
+                        </div>
+
+                        <div class="text-sm">
+                            <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500 nav-link">
+                                Forgot password?
+                            </a>
+                        </div>
+                    </div>
+
+                    <div>
+                        <button type="submit" 
+                                class="group relative w-full flex justify-center py-3 px-4 border border-transparent text-base font-medium rounded-lg text-white lightning-gradient hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 btn-primary">
+                            <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+                                <i class="fas fa-sign-in-alt text-indigo-200 group-hover:text-white"></i>
+                            </span>
+                            Sign in
+                        </button>
+                    </div>
+                </form>
             </div>
-        </form>
+
+            <div class="form-footer">
+                <!-- Social Login Options -->
+                <div>
+                    <div class="relative">
+                        <div class="absolute inset-0 flex items-center">
+                            <div class="w-full border-t border-gray-300"></div>
+                        </div>
+                        <div class="relative flex justify-center text-sm">
+                            <span class="px-2 bg-white text-gray-500">
+                                Or continue with
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="mt-6 grid grid-cols-2 gap-3">
+                        <div>
+                            <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-lg shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+                                <i class="fab fa-google text-red-500 mr-2"></i>
+                                Google
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-lg shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+                                <i class="fab fa-apple text-gray-900 mr-2"></i>
+                                Apple
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
-        // Add form validation and submission handling
-        document.querySelector('form').addEventListener('submit', function(e) {
-            e.preventDefault();
-            // Here you would typically handle the login logic
-            // For demo purposes, we'll just redirect to the payment page
-            window.location.href = 'index.html';
-        });
+            var Auth_token = null;
+        // Code JavaScript pour la connexion
+            const form = document.getElementById('loginForm');
+            const responseMsg = document.getElementById('response');
+            const email_partner = document.getElementById('email').value;
+            form.addEventListener('submit', function (e) {
+            e.preventDefault(); // Empêcher la soumission classique du formulaire
+
+            const loginData = {
+                email: email_partner,
+                password: document.getElementById('password').value
+            };
+
+            fetch('https://lightningpay-testbox.ejaraapis.xyz/api/v1/authentication/login', { 
+                method: 'POST',
+                headers: {
+                'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(loginData)
+            })
+                .then(res => {
+                if (!res.ok) throw new Error("Erreur de connexion");
+                return res.json();
+                })
+                .then(response => {
+                console.log("Connexion réussie :", response);
+                Auth_token = response.data.authToken;
+                window.alert("Connexion réussie !");
+                //window.location.href = 'index.html?ref =';
+
+                })
+                .catch(err => {
+                console.error("Erreur :", err.message);
+                responseMsg.textContent = "Erreur de connexion : " + err.message;
+                responseMsg.style.color = "red";
+                });
+            });
+
+            application_ref_id = "app-a784de118b70419c3ddd";
+
+            
+
     </script>
 </body>
 </html> 
